--- a/index.html
+++ b/index.html
@@ -26,12 +26,18 @@
   h1 span.second{
     color: #7ED957;
   }
+ div.main{
+  display:flex;
+  align-items:center;
+ }
 </style>
 </head>
 <body>
-
-  <h1>Inverte</h1>
-  <p>Invest sustainable, support realities<p>
+ 
+  <div class="main" >
+   <h1><span class="first">In</span><span class="second">verte</span></h1>
+    <p>Invest sustainable, support realities<p>
+  </div>
 
 </body>
 </html>
