--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     text-align:center;
     color:#fff;
   }
+  h1{
+    font-size: 3.5em;
+  }
   h1 span.first{
     color:#5ce1e6;
   }
@@ -29,6 +32,7 @@
  div.main{
   display:flex;
   align-items:center;
+  flex-direction:column;
  }
 </style>
 </head>
