--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     color:#fff;
   }
   h1{
-    font-size: 3.5em;
+    font-size: 4em;
   }
   h1 span.first{
     color:#5ce1e6;
@@ -33,6 +33,7 @@
   display:flex;
   align-items:center;
   flex-direction:column;
+  width:80%;
  }
 </style>
 </head>
