Sass changes, preprod

--- a/index.html
+++ b/index.html
@@ -1,48 +1,17 @@
 <html>
-<head>
-<title>Inverte | Invest sustainable, support realities</title>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-
-<style>
-  *{
-    margin:0;
-    padding:0;
-    box-sizing:border-box;
-    font-family: 'Poppins', sans-serif;
-  }
-  body{
-    display: flex;
-    justify-content:center;
-    align-items: center;
-    background:#053D57;
-  }
-  h1,p{
-    text-align:center;
-    color:#fff;
-  }
-  h1{
-    font-size: 4em;
-  }
-  h1 span.first{
-    color:#5ce1e6;
-  }
-  h1 span.second{
-    color: #7ED957;
-  }
- div.main{
-  display:flex;
-  align-items:center;
-  flex-direction:column;
-  width:80%;
- }
-</style>
-</head>
-<body>
- 
-  <div class="main" >
-   <h1><span class="first">In</span><span class="second">verte</span></h1>
-    <p>Invest sustainable, support realities<p>
-  </div>
-
-</body>
+  <head>
+    <title>Inverte | Invest sustainable, support realities</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/index.css" />
+  </head>
+  <body>
+    <div class="main">
+      <h1><span class="first">In</span><span class="second">verte</span></h1>
+      <p>Invest sustainable, support realities</p>
+      <p></p>
+    </div>
+  </body>
 </html>
