--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
           <div
             class="swiper-slide"
             style="
-              background-image: url('https://d19m59y37dris4.cloudfront.net/directory/1-6/img/photo/photo-1501621965065-c6e1cf6b53e2.jpg');
+              background-image: url('assets/back1.jpg');
               width: 1440px;
               opacity: 1;
               transform: translate3d(0px, 0px, 0px);
@@ -125,7 +125,7 @@
           <div
             class="swiper-slide swiper-slide-prev"
             style="
-              background-image: url('https://d19m59y37dris4.cloudfront.net/directory/1-6/img/photo/photo-1519974719765-e6559eac2575.jpg');
+              background-image: url('assets/back2.jpg');
               width: 1440px;
               opacity: 1;
               transform: translate3d(-1440px, 0px, 0px);
@@ -135,7 +135,7 @@
           <div
             class="swiper-slide swiper-slide-active"
             style="
-              background-image: url('https://d19m59y37dris4.cloudfront.net/directory/1-6/img/photo/photo-1490578474895-699cd4e2cf59.jpg');
+              background-image: url('assets/back3.jpg');
               width: 1440px;
               opacity: 1;
               transform: translate3d(-2880px, 0px, 0px);
@@ -145,7 +145,7 @@
           <div
             class="swiper-slide swiper-slide-next"
             style="
-              background-image: url('https://d19m59y37dris4.cloudfront.net/directory/1-6/img/photo/photo-1534850336045-c6c6d287f89e.jpg');
+              background-image: url('assets/back4.jpg');
               width: 1440px;
               opacity: 0;
               transform: translate3d(-4320px, 0px, 0px);
