--- a/guajira-water.html
+++ b/guajira-water.html
@@ -176,8 +176,8 @@
               <div class="form-group mb-4">
                 <label class="form-label" for="guests">Type of support *</label>
                 <select class="form-control" name="guests" id="guests">
-                  <option value="1">Support with money</option>
-                  <option value="2">Support with cash</option>
+                  <option value="1">Support with cash</option>
+                  <option value="2">Support with knowledge</option>
            
                 </select>
               </div>
