--- a/2nd.html
+++ b/2nd.html
@@ -154,36 +154,12 @@
             </ul>
           </div> -->
           <div class="text-block">
-            <span class="text-muted text-uppercase text-sm">Hosted by </span><hr>
             <div class="media"><img class="avatar avatar-lg mr-4" src="./dir-guajira/avatar-10.jpg" alt="Jack London">
               <div class="media-body">
-                <p> <br><strong>Simón David García</strong></p>
+                <p> <span class="text-muted text-uppercase text-sm">Hosted by </span><br><strong>Jack London</strong></p>
               </div>
             </div>
-            <br>
-            <p class="text-muted">The biggest challenge for development is the access to basic needs like water, energy or food. This project is a substantial aid for people from La Guajira to access drinking water through an innovative solution. The main goal is to give this community all the essential tools they need to provide real social impact. Engineering should always be an ally in the pursuit of better life quality. Therefore, my objective is to build, iterate and produce a long term system that could use available resources to change their lives dramatically while working together with the community.</p>
-            <div class="media"><img class="avatar avatar-lg mr-4" src="./dir-guajira/avatar-10-1.jpg" alt="Jack London">
-              <div class="media-body">
-                <p> <br><strong>Paula Andrea Leon Tabares</strong></p>
-              </div>
-            </div>
-            <br>
-            <p class="text-muted">I believe that engineering should be a source to solve many of the problems that arise today, so I have joined this project in order to help the communities of the Guajira through my career. It is necessary to generate conscience in many aspects, not only in helping the communities that suffer a state oblivion, but also through the renewable energies. With this project I hope to reduce my carbon footprint and help others do the same, while also making a basic need such as potable water accessible to many people.</p>
-            <div class="media"><img class="avatar avatar-lg mr-4" src="./dir-guajira/avatar-default.jpg" alt="Jack London">
-              <div class="media-body">
-                <p> <br><strong>Pedro Felipe Rubiano Perez</strong></p>
-              </div>
-            </div>
-            <br>
-            <p class="text-muted">The main motivation in doing this project relies in the desire to propose an effective solution for a problem that has prevailed over 15 years in La Guajira, despite of all the efforts made by the government and other entities. During this process I want to show and prove that engineering applied for social purposes needs sensible and human study dimensions to really work and generate positive social impact. Moreover, I believe that engineering projects should be conceived deeming an artistic approach to be more successful and well-received. And that is what I want for this project, a collective construction between engineers and communities, of a device powered by the sun capable of supplying drinkable water from the sea and conceived as an artwork.</p>
           </div>
-
-
-
-
-
-
-
           <div class="text-block">
             <h5 class="mb-4">Project location</h5>
             <div class="map-wrapper-300 mb-3">
