--- a/guajira-water.html
+++ b/guajira-water.html
@@ -154,7 +154,7 @@
             </ul>
           </div> -->
           <div class="text-block">
-            <span class="text-muted text-uppercase text-sm">Hosted by </span><hr>
+            <span class="text-muted text-uppercase text-sm">Project by </span><hr>
             <div class="media"><img class="avatar avatar-lg mr-4" src="./dir-guajira/avatar-10.jpg" alt="Jack London">
               <div class="media-body">
                 <p> <br><strong>Simón David García</strong></p>
