--- a/index.html
+++ b/index.html
@@ -165,11 +165,20 @@
             <div class="text-center text-lg-left">
               <p
                 class="subtitle letter-spacing-4 mb-2 text-secondary text-shadow"
-              >
-                The best holiday experience
-              </p>
+              ></p>
               <h1 class="display-3 font-weight-bold text-shadow">
-                Stay like a local
+                PEOPLE
+                <span
+                  class="typer"
+                  id="main"
+                  data-words="SUPPORTING,EMPOWERING,ENERGIZING"
+                  data-delay="100"
+                  data-deleteDelay="1000"
+                  data-colors="white,white,white"
+                ></span>
+                <span class="cursor" data-owner="main"></span>
+                <br />
+                PEOPLE THROUGH RENEWABLE ENERGIES
               </h1>
             </div>
           </div>
@@ -179,8 +188,7 @@
     <section class="py-6 bg-gray-100" id="explain">
       <div class="container">
         <div class="text-center pb-lg-4">
-          <p class="subtitle text-secondary">Title</p>
-          <h2 class="mb-5">Booking with us is easy</h2>
+          <h2 class="mb-5">HOW IT WORKS</h2>
         </div>
         <div class="row">
           <div class="col-lg-4 mb-3 mb-lg-0 text-center">
@@ -190,7 +198,7 @@
                   <use xlink:href="#destination-map-1"></use>
                 </svg>
               </div>
-              <h3 class="h5">Find projects that motivate you</h3>
+              <h3 class="h5">Find the project(s) you want to support.</h3>
               <p class="text-muted">Chose the projects you want to help</p>
             </div>
           </div>
@@ -201,7 +209,9 @@
                   <use xlink:href="#pay-by-card-1"></use>
                 </svg>
               </div>
-              <h3 class="h5">Book with confidence</h3>
+              <h3 class="h5">
+                Choose the way you want to help: either money or knowledge.
+              </h3>
               <p class="text-muted">
                 The bedding was hardly able to cover it and seemed ready to
                 slide off any moment. His many legs, pit
@@ -215,7 +225,7 @@
                   <use xlink:href="#heart-1"></use>
                 </svg>
               </div>
-              <h3 class="h5">Enjoy your vacation</h3>
+              <h3 class="h5">Track and share the impact you created!</h3>
               <p class="text-muted">
                 His room, a proper human room although a little too small, lay
                 peacefully between its four familiar
@@ -427,7 +437,7 @@
       <div class="container">
         <div class="overlay-content text-white py-lg-5">
           <h3 class="display-3 font-weight-bold text-serif text-shadow mb-5">
-            Ready to help the world?
+            Join the movement to energize communities in a green way!
           </h3>
           <a class="btn btn-light" href="#projects">Support realities</a>
         </div>
@@ -672,5 +682,6 @@
     </script>
     <!-- Main Theme JS file    -->
     <script src="./dir/theme.55f8348b.js"></script>
+    <script async src="https://unpkg.com/typer-dot-js@0.1.0/typer.js"></script>
   </body>
 </html>
