--- a/index.html
+++ b/index.html
@@ -166,18 +166,22 @@
               <p
                 class="subtitle letter-spacing-4 mb-2 text-secondary text-shadow"
               ></p>
-              <h1 class="display-3 font-weight-bold text-shadow">
+              <h1
+                style="font-size: 3em"
+                class="display-3 font-weight-bold text-shadow"
+              >
                 PEOPLE
-                <span
-                  class="typer"
-                  id="main"
-                  data-words="SUPPORTING,EMPOWERING,ENERGIZING"
-                  data-delay="100"
-                  data-deleteDelay="1000"
-                  data-colors="white,white,white"
-                ></span>
-                <span class="cursor" data-owner="main"></span>
-                <br />
+                <div style="min-width: 8em; display: inline-block">
+                  <span
+                    class="typer"
+                    id="main"
+                    data-words="SUPPORTING,EMPOWERING,ENERGIZING"
+                    data-delay="100"
+                    data-deleteDelay="1000"
+                    data-colors="white,white,white"
+                  ></span>
+                  <span class="cursor" data-owner="main"></span>
+                </div>
                 PEOPLE THROUGH RENEWABLE ENERGIES
               </h1>
             </div>
